# avatourguide

./: .gitignore  README.md
scripts/: data2cpp.py
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  algorithm.cpp  algorithm.h  data.cpp  data.h  fuzzysearch.cpp  fuzzysearch.h  gui.cpp  gui.h  levenshtein.cpp  levenshtein.h  main.cpp  match.cpp  match.h  processingLayer.cpp  processingLayer.h
